# fastapi-ml-model-serve

./: Dockerfile  README.md  pyproject.toml
app/: config.py  main.py
app/routes/: iris.py
app/schemas/: iris.py
app/services/: iris.py
app/utils/: constant.py
